new api call and new table;
