# backend/static/swagger.yaml
@@ -34,6 +34,33 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+  '/v0/getDescription':
+    parameters:
+      - name: id
+        in: query
+        description: Stock Name
+        required: true
+        schema:
+          type: string
+          format: string
+    get:
+      description: Grab about me for stock
+      responses:
+        '200':
+          description: Stock Found
+          content: 
+            application/json:
+              schema:
+                type: string
+        '404':
+          description: Stock ticker not found
+        default:
+          description: Unexpected Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+            
   '/v0/login':
     post:
       description: Login
@@ -170,6 +197,7 @@ components:
       properties:
         email:
           type: string
+          format: email
         password:
           type: string
       required:
